--- a/front/src/pages/MyPage/MyPage.module.css
+++ b/front/src/pages/MyPage/MyPage.module.css
@@ -102,9 +102,11 @@ body {
 }
 
 .brandTitle {
-  font-size: 22px;
+  font-size: 28px;
   font-weight: 500;
   letter-spacing: -0.02em;
+  color: #1b1b1b;
+  margin-left: 4px;
 }
 
 .iconButton {
@@ -166,7 +168,8 @@ body {
   width: 76px;
   height: 76px;
   border-radius: 999px;
-  background: #ececec;
+  object-fit: cover;
+  display: block;
 }
 
 .avatarEdit {
@@ -194,7 +197,7 @@ body {
 
 .profileName {
   font-size: 26px;
-  font-weight: 800;
+  font-weight: 500;
   letter-spacing: -0.02em;
 }
 
@@ -208,7 +211,7 @@ body {
   width: 100%;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 .logoutBtn {
@@ -284,11 +287,11 @@ body {
 .tabs {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   height: 65px;
-  width: 600px;
+  width: 900px;
   max-width: 100%;
-  margin: 35px auto 90px;
+  margin: 50px auto 90px;
   background: #eeeeee;
   border-radius: 999px;
   display: grid;
